fixed side alignment

--- a/index/style.css
+++ b/index/style.css
@@ -1,6 +1,7 @@
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     float: right;
+    font-size: 50px; /*center at some point*/
 }
 
 h3 {
@@ -14,7 +15,7 @@ h4 {
 }
 
 #grandpaUpgrade {
-    visibility: hidden;
+    display: none;
 }
 
 img {
@@ -36,4 +37,9 @@ img {
 .leftSide {
     width: 312px;
     position: absolute;
+}
+
+.rightSide {
+    width: 312px;
+    float: right;
 }
